--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  "dev": "cross-env NODE_ENV=development nodemon backend/server.js",
-  "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
-  "start": "cross-env NODE_ENV=production node backend/server.js"
-},
-
+    "dev": "cross-env NODE_ENV=development nodemon backend/server.js",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
+    "start": "cross-env NODE_ENV=production node backend/server.js"
+  },
   "type": "module",
   "keywords": [],
   "author": "Your Name",
@@ -17,6 +16,7 @@
     "@chakra-ui/react": "^2.10.7",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "framer-motion": "^12.6.5",
